--- a/src/common/styles/_helpers.scss
+++ b/src/common/styles/_helpers.scss
@@ -1,4 +1,16 @@
-// @dimentions
+/*********************************************************************
+ * MIXINS
+ **********************************************************************/
+
+@mixin transition_slow($property, $time: .2s, $ease: ease-in-out){
+  transition: $property $time $ease;
+}
+
+/*********************************************************************
+ * CLASSES
+ **********************************************************************/
+
 .full-height {
   height: 100%;
 }
+
