--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,14 @@
 $style-location: './common/styles' !default;
 
+/*********************************************************************
+ * FONT IMPORT
+ **********************************************************************/
+@import url('https://fonts.googleapis.com/css?family=Cabin:400,500,600,700');
+
+
+/*********************************************************************
+ * PARTIALS [BUNDLE]
+ **********************************************************************/
 @import './common/styles/_helpers.scss';
 @import './common/styles/_variables.scss';
 @import './common/styles/_globals.scss';
@@ -8,13 +17,3 @@ $style-location: './common/styles' !default;
 @import './common/styles/_main-header.scss';
 @import './common/styles/_partial-view.scss';
 @import './common/styles/_footer.scss';
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-html {
-  height: 100%;
-}
